// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLongestPrefix /(?:(a)|f)b(?<this>\\1)c/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\[ac\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\(\\?:\\)/,
}
`;

exports[`getLongestPrefix /(?:(a)|f)b(?<this>\\1)c/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\[ab\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\(\\?:\\)/,
}
`;

exports[`getLongestPrefix /(?<this>\\1\\2b)c(a)/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /b/,
  "insideAfter:true onlyInside:false looseG:false": /bc/,
  "insideAfter:true onlyInside:true looseG:false": /b/,
}
`;

exports[`getLongestPrefix /(?<this>\\1\\2b)c(a)/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /b/,
  "insideAfter:true onlyInside:false looseG:false": /b\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /b/,
}
`;

exports[`getLongestPrefix /(?<this>A(?!a)(?:(?!B)|(?!C)))\\w/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /A/,
  "insideAfter:false onlyInside:false looseG:true": /A/,
  "insideAfter:true onlyInside:false looseG:false": /A\\[\\\\dA-Z_b-z\\]/,
  "insideAfter:true onlyInside:false looseG:true": /A\\[\\\\dA-Z_b-z\\]/,
  "insideAfter:true onlyInside:true looseG:false": /A/,
  "insideAfter:true onlyInside:true looseG:true": /A/,
}
`;

exports[`getLongestPrefix /(?<this>A(?!a)(?:(?!B)|(?!C)))\\w/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /A/,
  "insideAfter:false onlyInside:false looseG:true": /A/,
  "insideAfter:true onlyInside:false looseG:false": /A\\[\\^\\]/,
  "insideAfter:true onlyInside:false looseG:true": /A\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /A/,
  "insideAfter:true onlyInside:true looseG:true": /A/,
}
`;

exports[`getLongestPrefix /(?<this>A)\\b/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /A/,
  "insideAfter:true onlyInside:false looseG:false": /A\\\\W/,
  "insideAfter:true onlyInside:true looseG:false": /A/,
}
`;

exports[`getLongestPrefix /(?<this>A)\\b/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /A/,
  "insideAfter:true onlyInside:false looseG:false": /A\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /A/,
}
`;

exports[`getLongestPrefix /(a)b(?<this>\\1)c/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a/,
  "insideAfter:true onlyInside:false looseG:false": /ac/,
  "insideAfter:true onlyInside:true looseG:false": /a/,
}
`;

exports[`getLongestPrefix /(a)b(?<this>\\1)c/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a/,
  "insideAfter:true onlyInside:false looseG:false": /ab/,
  "insideAfter:true onlyInside:true looseG:false": /a/,
}
`;

exports[`getLongestPrefix /(ab?)b(?<this>\\1)c/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a/,
  "insideAfter:true onlyInside:false looseG:false": /a/,
  "insideAfter:true onlyInside:true looseG:false": /a/,
}
`;

exports[`getLongestPrefix /(ab?)b(?<this>\\1)c/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:true looseG:false": /\\(\\?:\\)/,
}
`;

exports[`getLongestPrefix /(int|integer)/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /int/,
  "insideAfter:false onlyInside:false looseG:true": /int/,
  "insideAfter:true onlyInside:false looseG:false": /int\\[\\^\\]/,
  "insideAfter:true onlyInside:false looseG:true": /int\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /int/,
  "insideAfter:true onlyInside:true looseG:true": /int/,
}
`;

exports[`getLongestPrefix /(int|integer)/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\[rt\\]/,
  "insideAfter:false onlyInside:false looseG:true": /\\[rt\\]\\[en\\]\\[gi\\]/,
  "insideAfter:true onlyInside:false looseG:false": /\\[rt\\]\\[en\\]/,
  "insideAfter:true onlyInside:false looseG:true": /\\[rt\\]\\[en\\]\\[gi\\]\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\[rt\\]\\[en\\]/,
  "insideAfter:true onlyInside:true looseG:true": /\\[rt\\]\\[en\\]\\[gi\\]/,
}
`;

exports[`getLongestPrefix /=(food|foot)-/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /=foo\\[dt\\]-/,
  "insideAfter:false onlyInside:false looseG:true": /=foo\\[dt\\]-/,
  "insideAfter:true onlyInside:false looseG:false": /=foo\\[dt\\]-\\[\\^\\]/,
  "insideAfter:true onlyInside:false looseG:true": /=foo\\[dt\\]-\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /=foo\\[dt\\]-/,
  "insideAfter:true onlyInside:true looseG:true": /=foo\\[dt\\]-/,
}
`;

exports[`getLongestPrefix /=(food|foot)-/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /-\\[dt\\]oof=/,
  "insideAfter:false onlyInside:false looseG:true": /-\\[dt\\]oof=/,
  "insideAfter:true onlyInside:false looseG:false": /-\\[dt\\]oof=\\[\\^\\]/,
  "insideAfter:true onlyInside:false looseG:true": /-\\[dt\\]oof=\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /-\\[dt\\]oof=/,
  "insideAfter:true onlyInside:true looseG:true": /-\\[dt\\]oof=/,
}
`;

exports[`getLongestPrefix /=(script|source)/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /=s\\[co\\]/,
  "insideAfter:false onlyInside:false looseG:true": /=s\\[co\\]\\[ru\\]\\[ir\\]\\[cp\\]\\[et\\]/,
  "insideAfter:true onlyInside:false looseG:false": /=s\\[co\\]\\[ru\\]/,
  "insideAfter:true onlyInside:false looseG:true": /=s\\[co\\]\\[ru\\]\\[ir\\]\\[cp\\]\\[et\\]\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /=s\\[co\\]\\[ru\\]/,
  "insideAfter:true onlyInside:true looseG:true": /=s\\[co\\]\\[ru\\]\\[ir\\]\\[cp\\]\\[et\\]/,
}
`;

exports[`getLongestPrefix /=(script|source)/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\[et\\]/,
  "insideAfter:false onlyInside:false looseG:true": /\\[et\\]\\[cp\\]\\[ir\\]\\[ru\\]\\[co\\]s=/,
  "insideAfter:true onlyInside:false looseG:false": /\\[et\\]\\[cp\\]/,
  "insideAfter:true onlyInside:false looseG:true": /\\[et\\]\\[cp\\]\\[ir\\]\\[ru\\]\\[co\\]s=\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\[et\\]\\[cp\\]/,
  "insideAfter:true onlyInside:true looseG:true": /\\[et\\]\\[cp\\]\\[ir\\]\\[ru\\]\\[co\\]s=/,
}
`;

exports[`getLongestPrefix /^(?<this>A(?!a)(?!B))\\w/m ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /A/m,
  "insideAfter:true onlyInside:false looseG:false": /A\\[\\\\dAC-Z_b-z\\]/m,
  "insideAfter:true onlyInside:true looseG:false": /A/m,
}
`;

exports[`getLongestPrefix /^(?<this>A(?!a)(?!B))\\w/m rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /A/m,
  "insideAfter:true onlyInside:false looseG:false": /A\\[\\\\n\\\\r\\\\u2028\\\\u2029\\]/m,
  "insideAfter:true onlyInside:true looseG:false": /A/m,
}
`;

exports[`getLongestPrefix /^foo/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /foo/,
  "insideAfter:true onlyInside:false looseG:false": /foo\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /foo/,
}
`;

exports[`getLongestPrefix /^foo/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /oof/,
  "insideAfter:true onlyInside:false looseG:false": /oof\\[\\]/,
  "insideAfter:true onlyInside:true looseG:false": /oof/,
}
`;

exports[`getLongestPrefix /-(bets|bits)-/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /-b\\[ei\\]ts-/,
  "insideAfter:false onlyInside:false looseG:true": /-b\\[ei\\]ts-/,
  "insideAfter:true onlyInside:false looseG:false": /-b\\[ei\\]ts-\\[\\^\\]/,
  "insideAfter:true onlyInside:false looseG:true": /-b\\[ei\\]ts-\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /-b\\[ei\\]ts-/,
  "insideAfter:true onlyInside:true looseG:true": /-b\\[ei\\]ts-/,
}
`;

exports[`getLongestPrefix /-(bets|bits)-/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /-st\\[ei\\]b-/,
  "insideAfter:false onlyInside:false looseG:true": /-st\\[ei\\]b-/,
  "insideAfter:true onlyInside:false looseG:false": /-st\\[ei\\]b-\\[\\^\\]/,
  "insideAfter:true onlyInside:false looseG:true": /-st\\[ei\\]b-\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /-st\\[ei\\]b-/,
  "insideAfter:true onlyInside:true looseG:true": /-st\\[ei\\]b-/,
}
`;

exports[`getLongestPrefix /-(bets|bits|byte)-/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /-b\\[eiy\\]t/,
  "insideAfter:false onlyInside:false looseG:true": /-b\\[eiy\\]t\\[es\\]-/,
  "insideAfter:true onlyInside:false looseG:false": /-b\\[eiy\\]t\\[es\\]/,
  "insideAfter:true onlyInside:false looseG:true": /-b\\[eiy\\]t\\[es\\]-\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /-b\\[eiy\\]t\\[es\\]/,
  "insideAfter:true onlyInside:true looseG:true": /-b\\[eiy\\]t\\[es\\]-/,
}
`;

exports[`getLongestPrefix /-(bets|bits|byte)-/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /-\\[es\\]t/,
  "insideAfter:false onlyInside:false looseG:true": /-\\[es\\]t\\[eiy\\]b-/,
  "insideAfter:true onlyInside:false looseG:false": /-\\[es\\]t\\[eiy\\]/,
  "insideAfter:true onlyInside:false looseG:true": /-\\[es\\]t\\[eiy\\]b-\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /-\\[es\\]t\\[eiy\\]/,
  "insideAfter:true onlyInside:true looseG:true": /-\\[es\\]t\\[eiy\\]b-/,
}
`;

exports[`getLongestPrefix /a(?!c)b/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /ab/,
  "insideAfter:true onlyInside:false looseG:false": /ab\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /ab/,
}
`;

exports[`getLongestPrefix /a(?!c)b/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /ba/,
  "insideAfter:true onlyInside:false looseG:false": /ba\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /ba/,
}
`;

exports[`getLongestPrefix /a(?<this>bc)d/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /bc/,
  "insideAfter:true onlyInside:false looseG:false": /bcd/,
  "insideAfter:true onlyInside:true looseG:false": /bc/,
}
`;

exports[`getLongestPrefix /a(?<this>bc)d/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /cb/,
  "insideAfter:true onlyInside:false looseG:false": /cba/,
  "insideAfter:true onlyInside:true looseG:false": /cb/,
}
`;

exports[`getLongestPrefix /a(b|c|d)z/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a\\[bcd\\]z/,
  "insideAfter:false onlyInside:false looseG:true": /a\\[bcd\\]z/,
  "insideAfter:true onlyInside:false looseG:false": /a\\[bcd\\]z\\[\\^\\]/,
  "insideAfter:true onlyInside:false looseG:true": /a\\[bcd\\]z\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /a\\[bcd\\]z/,
  "insideAfter:true onlyInside:true looseG:true": /a\\[bcd\\]z/,
}
`;

exports[`getLongestPrefix /a(b|c|d)z/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /z\\[bcd\\]a/,
  "insideAfter:false onlyInside:false looseG:true": /z\\[bcd\\]a/,
  "insideAfter:true onlyInside:false looseG:false": /z\\[bcd\\]a\\[\\^\\]/,
  "insideAfter:true onlyInside:false looseG:true": /z\\[bcd\\]a\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /z\\[bcd\\]a/,
  "insideAfter:true onlyInside:true looseG:true": /z\\[bcd\\]a/,
}
`;

exports[`getLongestPrefix /a(b|c|de)z/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a\\[bcd\\]/,
  "insideAfter:false onlyInside:false looseG:true": /a\\[bcd\\]/,
  "insideAfter:true onlyInside:false looseG:false": /a\\[bcd\\]\\[ez\\]/,
  "insideAfter:true onlyInside:false looseG:true": /a\\[bcd\\]\\[ez\\]/,
  "insideAfter:true onlyInside:true looseG:false": /a\\[bcd\\]\\[ez\\]/,
  "insideAfter:true onlyInside:true looseG:true": /a\\[bcd\\]\\[ez\\]/,
}
`;

exports[`getLongestPrefix /a(b|c|de)z/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /z\\[bce\\]/,
  "insideAfter:false onlyInside:false looseG:true": /z\\[bce\\]/,
  "insideAfter:true onlyInside:false looseG:false": /z\\[bce\\]\\[ad\\]/,
  "insideAfter:true onlyInside:false looseG:true": /z\\[bce\\]\\[ad\\]/,
  "insideAfter:true onlyInside:true looseG:false": /z\\[bce\\]\\[ad\\]/,
  "insideAfter:true onlyInside:true looseG:true": /z\\[bce\\]\\[ad\\]/,
}
`;

exports[`getLongestPrefix /a(foo|bar)z/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a\\[bf\\]/,
  "insideAfter:false onlyInside:false looseG:true": /a\\[bf\\]\\[ao\\]\\[or\\]z/,
  "insideAfter:true onlyInside:false looseG:false": /a\\[bf\\]\\[ao\\]/,
  "insideAfter:true onlyInside:false looseG:true": /a\\[bf\\]\\[ao\\]\\[or\\]z\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /a\\[bf\\]\\[ao\\]/,
  "insideAfter:true onlyInside:true looseG:true": /a\\[bf\\]\\[ao\\]\\[or\\]z/,
}
`;

exports[`getLongestPrefix /a(foo|bar)z/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /z\\[or\\]/,
  "insideAfter:false onlyInside:false looseG:true": /z\\[or\\]\\[ao\\]\\[bf\\]a/,
  "insideAfter:true onlyInside:false looseG:false": /z\\[or\\]\\[ao\\]/,
  "insideAfter:true onlyInside:false looseG:true": /z\\[or\\]\\[ao\\]\\[bf\\]a\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /z\\[or\\]\\[ao\\]/,
  "insideAfter:true onlyInside:true looseG:true": /z\\[or\\]\\[ao\\]\\[bf\\]a/,
}
`;

exports[`getLongestPrefix /a*/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\(\\?:\\)/,
}
`;

exports[`getLongestPrefix /a*/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\(\\?:\\)/,
}
`;

exports[`getLongestPrefix /a*b/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\[ab\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\[ab\\]/,
}
`;

exports[`getLongestPrefix /a*b/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /b/,
  "insideAfter:true onlyInside:false looseG:false": /b\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /b/,
}
`;

exports[`getLongestPrefix /a+/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a/,
  "insideAfter:true onlyInside:false looseG:false": /a\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /a/,
}
`;

exports[`getLongestPrefix /a+/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a/,
  "insideAfter:true onlyInside:false looseG:false": /a\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /a/,
}
`;

exports[`getLongestPrefix /a+b/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /a/,
  "insideAfter:true onlyInside:false looseG:false": /a\\[ab\\]/,
  "insideAfter:true onlyInside:true looseG:false": /a\\[ab\\]/,
}
`;

exports[`getLongestPrefix /a+b/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /ba/,
  "insideAfter:true onlyInside:false looseG:false": /ba\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /ba/,
}
`;

exports[`getLongestPrefix /a?/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\(\\?:\\)/,
}
`;

exports[`getLongestPrefix /a?/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\(\\?:\\)/,
}
`;

exports[`getLongestPrefix /a?b/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /\\(\\?:\\)/,
  "insideAfter:true onlyInside:false looseG:false": /\\[ab\\]/,
  "insideAfter:true onlyInside:true looseG:false": /\\[ab\\]/,
}
`;

exports[`getLongestPrefix /a?b/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /b/,
  "insideAfter:true onlyInside:false looseG:false": /b\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /b/,
}
`;

exports[`getLongestPrefix /a{0}b/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /b/,
  "insideAfter:true onlyInside:false looseG:false": /b\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /b/,
}
`;

exports[`getLongestPrefix /a{0}b/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /b/,
  "insideAfter:true onlyInside:false looseG:false": /b\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /b/,
}
`;

exports[`getLongestPrefix /a{4,4}/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /aaaa/,
  "insideAfter:true onlyInside:false looseG:false": /aaaa\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /aaaa/,
}
`;

exports[`getLongestPrefix /a{4,4}/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /aaaa/,
  "insideAfter:true onlyInside:false looseG:false": /aaaa\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /aaaa/,
}
`;

exports[`getLongestPrefix /a{4,4}b/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /aaaab/,
  "insideAfter:true onlyInside:false looseG:false": /aaaab\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /aaaab/,
}
`;

exports[`getLongestPrefix /a{4,4}b/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /baaaa/,
  "insideAfter:true onlyInside:false looseG:false": /baaaa\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /baaaa/,
}
`;

exports[`getLongestPrefix /a{4,7}/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /aaaa/,
  "insideAfter:true onlyInside:false looseG:false": /aaaa\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /aaaa/,
}
`;

exports[`getLongestPrefix /a{4,7}/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /aaaa/,
  "insideAfter:true onlyInside:false looseG:false": /aaaa\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /aaaa/,
}
`;

exports[`getLongestPrefix /a{4,7}b/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /aaaa/,
  "insideAfter:true onlyInside:false looseG:false": /aaaa\\[ab\\]/,
  "insideAfter:true onlyInside:true looseG:false": /aaaa\\[ab\\]/,
}
`;

exports[`getLongestPrefix /a{4,7}b/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /baaaa/,
  "insideAfter:true onlyInside:false looseG:false": /baaaa\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /baaaa/,
}
`;

exports[`getLongestPrefix /abc/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /abc/,
  "insideAfter:true onlyInside:false looseG:false": /abc\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /abc/,
}
`;

exports[`getLongestPrefix /abc/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /cba/,
  "insideAfter:true onlyInside:false looseG:false": /cba\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /cba/,
}
`;

exports[`getLongestPrefix /foo$/ ltr 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /foo/,
  "insideAfter:true onlyInside:false looseG:false": /foo\\[\\]/,
  "insideAfter:true onlyInside:true looseG:false": /foo/,
}
`;

exports[`getLongestPrefix /foo$/ rtl 1`] = `
Object {
  "insideAfter:false onlyInside:false looseG:false": /oof/,
  "insideAfter:true onlyInside:false looseG:false": /oof\\[\\^\\]/,
  "insideAfter:true onlyInside:true looseG:false": /oof/,
}
`;
